App: fix for #809, and may be general not only textEditor specific, restoring the viewport scroll on keyboard show on iOS. Customized statusBar colors to match the App navbar on iOS. Tried to fix a weird bug on iOS with TilesList bottom line, no effect. Fixed bug with menus overlay, after the fix for splash screen on IE9-10. Added auto scroll top to the activities content when are showed.

--- a/app/source/css/components/TilesList.styl
+++ b/app/source/css/components/TilesList.styl
@@ -18,8 +18,8 @@
         position: relative;
     }
     
-    > *::after {
-        border-bottom: 1px solid $gray-background;
+    > *:after {
+        border-bottom: 1px solid $gray-background !important;
         content: "";
         display: block;
         position: absolute;
